# freehold-net

./: .clang-format  .gitignore  Cargo.toml  GEMINI.md  Makefile  PROTOCOL_FLOWS.md  README.md  biome.json  goal  quickstart.sh  ruff.toml
.github/workflows/: release.yml
build-scripts/: build-linux.sh  build-macos.sh  build-windows.sh
reference/JesseQ/: JesseQ.md  README.md  app_run_party1.py  app_run_party2.py  compile.py  install.py  mul_hash_party1.py  mul_hash_party2.py  run_party1.py  run_party2.py
reference/JesseQ/JQv1/cmake/: emp-zk-config.cmake
reference/JesseQ/JQv1/emp-zk/emp-vole/: vole_triple.h
reference/JesseQ/JQv1/emp-zk/emp-zk-arith/: int_fp.h  ostriple.h  polynomial.h
reference/JesseQ/JQv1/emp-zk/emp-zk-bool/: emp-zk-bool.h  ostriple.h  polynomial.h
reference/JesseQ/JQv1/test/: CMakeLists.txt
reference/JesseQ/JQv1/test/arith/: circuit_scalability.cpp  mul_hash_performance.cpp
reference/JesseQ/JQv1/test/bool/: circuit_scalability.cpp  mul_hash_performance.cpp
reference/JesseQ/JQv2/cmake/: emp-zk-config.cmake
reference/JesseQ/JQv2/emp-zk/emp-zk-arith/: int_fp.h  ostriple.h  polynomial.h  zk_fp_exec.h  zk_fp_exec_prover.h  zk_fp_exec_verifier.h
reference/JesseQ/JQv2/emp-zk/emp-zk-bool/: ostriple.h  polynomial.h
reference/JesseQ/JQv2/test/: CMakeLists.txt
reference/JesseQ/JQv2/test/arith/: inner_prdt.cpp  matrix_mul.cpp  ostriple.cpp  sis.cpp
reference/JesseQ/JQv2/test/bool/: inner_prdt.cpp  ostriple.cpp
reference/JesseQ/batchman/: .gitignore  install.py  party1.py  party2.py
reference/JesseQ/batchman/JQv1/: CMakeLists.txt  Makefile  libemp-zk.dylib
reference/JesseQ/batchman/JQv1/cmake/: emp-zk-config.cmake
reference/JesseQ/batchman/JQv1/emp-zk/emp-zk-arith/: int_fp.h  ostriple.h  zk_fp_exec.h  zk_fp_exec_prover.h  zk_fp_exec_verifier.h
reference/JesseQ/batchman/JQv1/test/: CMakeLists.txt  CTestTestfile.cmake  Makefile
reference/JesseQ/batchman/JQv1/test/arith/: stack_batched_matmul_v1.cpp
reference/JesseQ/batchman/JQv2/emp-zk/emp-zk-arith/: int_fp.h  ostriple.h  zk_fp_exec.h  zk_fp_exec_prover.h  zk_fp_exec_verifier.h
reference/JesseQ/batchman/JQv2/test/: CMakeLists.txt
reference/JesseQ/batchman/JQv2/test/arith/: stack_batched_matmul_v1.cpp
reference/JesseQ/batchman/stacking-vole-zk/: install.sh
reference/JesseQ/batchman/stacking-vole-zk/test/arith/: stack_batched_matmul_v1.cpp
src/: demo_e2e.py  enroll_test.py  send_mail.py  validate_resharding.py
src/client/: sharding.py
src/freehold-bridge/: Cargo.toml
src/freehold-bridge/src/: main.rs
src/light-web-client/: README.md  index.ts  package.json
src/server/: CMakeLists.txt  README.md  discovery.cpp  discovery.h  discovery.py  forwarder.cpp  forwarder.h  forwarder.py  h3_proxy.cpp  h3_proxy.h  llss_mpc.h  logging.h  mpcauth_server.cpp  relay_client.cpp  relay_client.h  smtp_client.cpp  smtp_client.h  smtp_mpc.h  tls_smpc.h
src/web-client/: index.html  package-lock.json  package.json  vite.config.ts
src/web-client/src/: AudioControl.ts  BackgroundShader.ts  GalaxyShader.ts  MpcTerminal.ts  NetworkViz.ts  Presence.ts  SignaturePen.ts  background.ts  companies.ts  e2e.test.ts  favicon.ts  fh-demo.html  fh-spinner.ts  main.ts  main.ts.color  mpc_util.ts  palettes.ts  stealth_wizard.ts  ws.ts
tests/: demo_mpc_flow.sh
